--- a/index.html
+++ b/index.html
@@ -1,52 +1,16 @@
 <!DOCTYPE html>
-<html> Много текста 
-Много текста 
-Много текста 
-Много текста
-Много текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текстаМного текста 
-Много текста 
-Много текста 
-Много текста 
+<html>
 <head>
-<script src="./script.js"></script>
-<link rel="stylesheet" type="text/css" href="./style.css">
+<script src="./scripts/jquery-3.3.1.js"></script>
+<script src="./scripts/script.js"></script>
+<link rel="stylesheet" type="text/css" href="./styles/style.css">
 <title>My First Homework ver. 1.0</title>
 </head>
 <body>
 <div class="fix">
 	<h1>Заговок</h1>
 		<div class="img">
-			<img src=".\style and script\Zom.jpg">
+			<img src="./image/Zom.jpg">
 			<p>Text text text</p>
 		</div>
 		<div class="text">
@@ -64,8 +28,14 @@
 			<button onclick="dec(def)"> Уменьшить </button>
 			<button onclick="check(def)"> ПРОВЕРКА </button>
 			<button onclick="result ()"> Просто кнопка</button>
-			<input value="А тут пингвины" type="button" onclick=location.href=".\style and script\Peng.jpg">
+			<input value="А тут пингвины" type="button" onclick=location.href="./image/Peng.jpg">
 		</div>
 </div>
+
+		<ul id="itemlist">
+			
+		</ul>
+
+
 </body>
 </html>
