--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 			</ul>
 		</div>
 
+		<div id="Tasks">
+			<input id="addTasks" type="comment" placeholder="Напиши задачу">	
+			<input id="buttonTasks" type="submit" value="Добавить" onclick="addTasks()">
+		</div>
+		
 			
 		<div id="button">
 			<p>Вот так! А теперь к кнопкам.</p>
@@ -71,9 +76,10 @@
 						<input id="bank_balans" type="number" placeholder="Сколько у тебя денег?"><br>
 						<input id="rate_tel" type="number" placeholder="Сколько стоит телефон?"><br>
 						<input id="rate_acc" type="number" placeholder="Сколько стоит аксессуар?"><br>
-						<input type="submit" value="Отправить" onclick="SummaTell()">					
+						<input type="submit" value="Отправить" onclick="SummaTell()">
 					</div>
 				<p id="Telephone"></p>
+						<input type="submit" value="кнопка не работает!" onclick="delRezultTelepphone()">					
 			</div>
 
 	</div>
