--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 			<div id="toggleImage">
 				<img class="changeImg" src="./image/peng.jpg" width="250px" height="200px" onclick="addImage()">
-				<img src="./image/skyearth.jpg" width="250px" height="200px">
-				<img src="./image/orangerock.jpg" width="250px" height="200px">
+				<img class="changeImg" src="./image/skyearth.jpg" width="250px" height="200px">
+				<img class="changeImg" src="./image/orangerock.jpg" width="250px" height="200px">
 			</div>
 				<div id="imagecontainer"></div>
 
