--- a/index.html
+++ b/index.html
@@ -67,13 +67,21 @@
 								<p>Просто понажимай. Половина из них не работает.</p><br>
 								<button >Увеличить</button>
 								<button >Уменьшить</button>
-								<button >ПРОВЕРКА</button><br>
+								<button target="_blank">ПРОВЕРКА</button><br>
 								<button >Просто кнопка</button>
 								<button >AddList</button><br>
 								<button >Записать новое значение</button>
 								<button id="HideButton">Скрыть</button>
 								<button id="createPopup">Показать окно</button>
+								<iframe
+									         src="./landing/landing.html"
+									         id="frameBeerContent"
+									         scrolling="no"
+									         frameborder="no"
+									         sandbox="allow-same-origin allow-scripts"
+									></iframe>
 							</div>
+							<a href="./landing/landing.html" target="_blank">ЭКЗАМЕН</a>
 						</div>
 
 							<div id="calculator">
