--- a/landing/landing.html
+++ b/landing/landing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="frameBeerContent">
 <head>
 	<script src="./scripts/jquery-3.3.1.js"></script>
 	<script src="./scripts/script.js"></script>
@@ -29,7 +29,7 @@
           </div>
         </div>
 
-        <div class="beer-block">
+        <div class="content-beer-block">
 
 	        <div class="author-content">	
 	        	<div class="author">
@@ -126,6 +126,10 @@
       </div>
     </div>
 		
-		<div class="shadowRoot"></div> <!-- Место для всплывашек, того что изначально не видно на сайте -->
+		<div class="shadowRoot">
+
+			<div id="ageCheck"></div>
+
+		</div> <!-- Место для всплывашек, того что изначально не видно на сайте -->
 	</body>
 </html>
